Fixed display/select error in the Quiz section. Should now display QuizTypes correctly and show empty quiz.

--- a/src/main/webapp/admin/editQuiz.xhtml
+++ b/src/main/webapp/admin/editQuiz.xhtml
@@ -19,7 +19,7 @@
                         <h:outputLabel value="Title: " />
                         <p:inputText value="#{quizController.selected.name}"/>
                         <h:outputLabel value="Type: "/>                        
-                        <h:selectOneMenu value="#{quizController.quiz.quizType}">
+                        <h:selectOneMenu value="#{quizController.selected.quizType}">
                             <f:selectItems value="#{quizController.quizTypes}" var="quizType" itemValue="#{quizType}" itemLabel="#{quizType.name}"/>
                         </h:selectOneMenu>                   
                         <h:outputLabel value="Description: " />
