--- a/src/main/webapp/admin/editFrontpage.xhtml
+++ b/src/main/webapp/admin/editFrontpage.xhtml
@@ -143,7 +143,7 @@
             <p:dialog id="newbibsysDialog" header="New BibSysFragment" widgetVar="newbibsysdlg">  
                 <h:panelGrid columns="2" cellpadding="5">  
                     <h:outputLabel for="nameb" value="Name:" />  
-                    <p:inputText value="#{frontpageController.bibsys}" id="nameb" label="nameb" />
+                    <p:inputText value="#{frontpageController.bibsysname}" id="nameb" label="nameb" />
                     <h:outputLabel value="No options" />  
                     <f:facet name="footer">  
                         <p:commandButton id="saveButtonb" value="Submit"   
