removed unfinished stuff from frontpage

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -11,7 +11,7 @@
     </ui:define>
    
     <ui:define name="mainsingle">
-        <div id="appicons">
+        <!--<div id="appicons">
             <div id="frontpageheader">
                 HØGSKOLEN I ÅLESUNDS E-LÆRINGSAPP
             </div>
@@ -87,7 +87,7 @@
                     </div>
                 </p:commandLink>
             </div>
-        </div>
+        </div>-->
         <div id="bottombanner">
             <a href="Muldvarp-debug.apk">
                 <h:graphicImage name="android_vector.png" library="images"/>
@@ -95,7 +95,7 @@
             </a>
         </div>
         
-        <p:dialog header="Information" widgetVar="infodlg" draggable="false" resizable="false">  
+        <!--<p:dialog header="Information" widgetVar="infodlg" draggable="false" resizable="false">  
             <h:graphicImage name="studier.png" library="images"/><br/> 
             <p>Beskrivende tekst</p>
             <h:commandButton onclick="infodlg.hide()" value="Close" />
@@ -147,6 +147,6 @@
             <h:graphicImage name="studier.png" library="images"/><br/> 
             <p>Beskrivende tekst</p>
             <h:commandButton onclick="helpdlg.hide()" value="Close" />
-        </p:dialog>
+        </p:dialog>-->
     </ui:define>
 </ui:composition>
