readded icons but removed links

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -11,83 +11,65 @@
     </ui:define>
    
     <ui:define name="mainsingle">
-        <!--<div id="appicons">
+        <div id="appicons">
             <div id="frontpageheader">
                 HØGSKOLEN I ÅLESUNDS E-LÆRINGSAPP
             </div>
             <div class="icon">
-                <p:commandLink onclick="infodlg.show()" >
                     <h:graphicImage name="stolen_contacts.png" library="images"/>
                     <div class="icontext">
                         Informasjon
                     </div>
-                </p:commandLink>
             </div>
             <div class="icon">
-                <p:commandLink onclick="newsdlg.show()" >
                     <h:graphicImage name="stolen_news.png" library="images"/>
                     <div class="icontext">
                         Nyheter
                     </div>
-                </p:commandLink>
             </div>
             <div class="icon">
-                <p:commandLink onclick="progdlg.show()" >
                     <h:graphicImage name="stolen_course_programme.png" library="images"/>
                     <div class="icontext">
                         Studier
                     </div>
-                </p:commandLink>
             </div>
             <div class="icon">
-                <p:commandLink onclick="videodlg.show()" >
                     <h:graphicImage name="stolen_videos.png" library="images"/>
                     <div class="icontext">
                         Video
                     </div>
-                </p:commandLink>
             </div>
             <div class="icon">
-                <p:commandLink onclick="quizdlg.show()" >
                     <h:graphicImage name="stolen_quiz.png" library="images"/>
                     <div class="icontext">
                         Quiz
                     </div>
-                </p:commandLink>
             </div>
             <div class="icon">
-                <p:commandLink onclick="docdlg.show()" >
                     <h:graphicImage name="stolen_docs.png" library="images"/>
                     <div class="icontext">
                         Dokumenter
                     </div>
-                </p:commandLink>
             </div>
             <div class="icon">
-                <p:commandLink onclick="opptakdlg.show()" >
                     <h:graphicImage name="stolen_opptak.png" library="images"/>
                     <div class="icontext">
                         Opptak
                     </div>
-                </p:commandLink>
             </div>
             <div class="icon">
-                <p:commandLink onclick="datedlg.show()" >
                     <h:graphicImage name="stolen_calender.png" library="images"/>
                     <div class="icontext">
                         Datoer
                     </div>
-                </p:commandLink>
             </div>
             <div class="icon">
-                <p:commandLink onclick="helpdlg.show()" >
                     <h:graphicImage name="stolen_help.png" library="images"/>
                     <div class="icontext">
                         Hjelp
                     </div>
-                </p:commandLink>
             </div>
-        </div>-->
+        </div>
         <div id="bottombanner">
             <a href="Muldvarp-debug.apk">
                 <h:graphicImage name="android_vector.png" library="images"/>
